<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>fr.an.drawingboard</groupId>
	<artifactId>drawingboard-ui</artifactId>
	<version>0.0.1-SNAPSHOT</version>

	<description>
    run with
    mvn javafx:run
    or .. --module-path .... --add-modules javafx.base,javafx.controls,javafx.graphics
    
	see  https://openjfx.io/openjfx-docs/#maven
	
	</description>

	<properties>
		<java.version>15</java.version>
<!-- 
 		<javafx.version>12</javafx.version>
 -->
 		<javafx.version>15.0.1</javafx.version>
 	</properties>

	<dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.8</version>
            <scope>provided</scope>
        </dependency>
        	
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-controls</artifactId>
			<version>${javafx.version}</version>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-graphics</artifactId>
			<version>${javafx.version}</version>
		</dependency>
		
		<dependency>
		    <groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>29.0-jre</version>
		</dependency>
	
		<dependency>
			<groupId>org.ojalgo</groupId>
			<artifactId>ojalgo</artifactId>
			<version>48.3.1</version>
		</dependency>

		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>test</scope>
		</dependency>
	</dependencies>


	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.7.0</version>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>
			
			<plugin>
		        <groupId>org.openjfx</groupId>
		        <artifactId>javafx-maven-plugin</artifactId>
		        <version>0.0.5</version>
		        <configuration>
		            <mainClass>fr.an.drawingboard.ui.DrawingBoardAppMain</mainClass>
		        </configuration>
		    </plugin>
		</plugins>

	</build>
</project>
